flex-wrap fix

--- a/style.css
+++ b/style.css
@@ -134,6 +134,7 @@ footer p {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap
   }
 
   form div {
